Test case and fix for #3098 - Tree node text wraps to the next line if an icon is present and width is fixed
svn changeset:8265/svn branch:6.0

--- a/WebContent/VAADIN/themes/base/tree/tree.css
+++ b/WebContent/VAADIN/themes/base/tree/tree.css
@@ -1,5 +1,6 @@
 .v-tree {
-	text-align: left /* Force default alignment */
+	text-align: left; /* Force default alignment */
+	overflow: hidden;
 }
 .v-tree-node {
 	background: transparent url(../common/img/sprites.png) no-repeat 5px -37px;
@@ -13,7 +14,7 @@ div.v-tree-node-leaf {
 .v-tree-node-caption {
 	margin-left: 1em;
 }
-.v-tree-node span {
+.v-tree-node-caption div {
 	cursor: pointer;
 	white-space: nowrap;
 }
