--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1377,7 +1377,8 @@ textarea.v-textarea-prompt {
 
 /* ./WebContent/VAADIN/themes/base/tree/tree.css */
 .v-tree {
-	text-align: left /* Force default alignment */
+	text-align: left; /* Force default alignment */
+	overflow: hidden;
 }
 .v-tree-node {
 	background: transparent url(../base/common/img/sprites.png) no-repeat 5px -37px;
@@ -1391,7 +1392,7 @@ div.v-tree-node-leaf {
 .v-tree-node-caption {
 	margin-left: 1em;
 }
-.v-tree-node span {
+.v-tree-node-caption div {
 	cursor: pointer;
 	white-space: nowrap;
 }
